mejore el contenido del html con CSS

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,13 +8,24 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <header>
+    <header class="cabeza"> 
+
+        <div>
         <h1>Titulo del post</h1>
+        </div>
+
+        <nav>
+            <a href="#">Git1</a>
+            <a href="#">Git2</a>
+            <a href="#">Git3</a>
+        </nav>
+
     </header>
 
     <section>
         <h1>Contenido del post</h1>
         <p> Y este es un parrafo de inicio</p>
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit consequatur dolore laudantium sequi! Perferendis suscipit blanditiis provident porro! Dolorum totam facere dolor obcaecati molestias ratione quod maxime vero perferendis fugit?</p>
     </section>
 </body>
 </html>
